LIST OF CHANGES FOR NPG-QC PACKAGE

 - make travis happy as running apt-get update by default was disabled.
 - NovaSeq run info file size is around 95KB, too large for the text column type.
   Column type changed to mediumtext.

release 64.6.2
 - QC viewer changes for genotype call

release 64.6.1
 - tweak to GbS library type check in genotype call as arrived as GBS (now case-insensitive).
 - Exit rna seqc gracefully if bam has no reads
 - more stringent ref check now required for Pf3D7_v3.fa/hs37d5__Pf3D7_v3.fa
   in genotype check

release 64.6
 - add new metric glogin_pct_tpm to RNA-SeQC check
 - DBIx schema loader script: alter table to add new globin metric column
 - add functionality to pass some of the files necessary to run RNA-SeQC
   as CLI options for program qc for more flexibility for stand alone run
 - add new role for rna_seqc to implement ability to extract values from
   column other_metrics to be stored in ml warehouse database.
 - add tag_hops_power and tag_hops_percent columns to tag metrics
 - remove run_timeline component on the Illumina QC loader
 - stop generating DBIx class for run_timeline db table
 - remove unused methods of the run_graph Clearpress model
 - add new role for rna_seqc to implement ability to extract values from
   column other_metrics to be stored in ml warehouse database
 - changes for GbS genotype calling check 
 - tag_sniff
    handle separators in BC tags for dual-index runs
    allow dual-index runs to be revcomped independantly
    when tag has a separator -t option operates on subtags
    allowed to ignore an index when the BC tag contains a separator 

release 64.5
 - qc outcomes model: code generalisation to simplify addition of
   further qc types
 - uqc outcomes - saving and updating enabled
 - switch to node 6.12.2 in travis
 - stop generating DBIx classes for unused tables
 - tiny tweaks to rna and verify bam id help links
 - ensure, where practical, that saving and retrieving qc outcomes